# frem

./: Cargo.toml  build.rs  build.zig  build.zig.zon  flake.nix
graphql/: queries.graphql  schema.graphql
pkg/linear-client/: build.zig  build.zig.zon
pkg/linear-client/src/: Client.zig  Response.zig  main.zig  models.zig  queries.zig  test.zig
pkg/linear-client/src/queries/: issue.graphql  issueAllMeta.graphql  issues.graphql  me.graphql  team.graphql  teams.graphql
src/: auth.rs  config.rs  main.rs  main.zig  oauth.rs
src/api/: client.rs  types.rs
src/modules/arg-parser/: ArgParser.zig
src/modules/commands/auth/: AuthHandler.zig
src/modules/commands/issue/: IssueHandler.zig
